# waql-tool

./: .gitignore  Cargo.toml  README.md
docs/: README.en.md
examples/: demo.rs
src/: config.rs  lib.rs  main.rs  query_executor.rs  ui.rs
src/waapi/: client.rs  mod.rs
src/waql/: mod.rs  properties.rs  syntax.rs
